----------
v5.0.0-git
----------

[jan] Add support for monthly recurrence on last weekday (Request #1922).
[jan] Keep original file names when PUTing tasks via WebDAV.
[mjr] Add an "actual" field for tracking actual time spent.
[mjr] Add support for task organizer and iTip functionality.
[jan] Fall back to sort by name if sort criteria are equal.
[jan] Remove configuration option for database table.
[jan] Improve priority display in basic view.
[jan] Display task list background color in basic view.
[jan] Import snooze information from iCalendar alarms.
[jan] Import iCalendar 2.0 alarms.
[jan] Import and export recurrence rules to iCalendar.
[jan] Return ETags with browse() API method.


-------
v4.2.13
-------

[jan] Fix sorting by due date with PHP < 5.5 (Bug #14507).


-------
v4.2.12
-------

[mjr] Fix fatal error caused by regression in sorting recurring tasks with due
      dates (Bug #14504).


-------
v4.2.11
-------

[mjr] Fix sorting recurring tasks by due date (Bug #14403).


-------
v4.2.10
-------

[mjr] Fix handling of start and due dates when syncing via EAS.
[jan] Avoid fatal errors if tasks don't have a UID.
[mjr] Fix parsing certain date formats (Bug #14348).
[jan] Fix deleteing alarms when completing a task.
[mjr] Require Horde_Perms::DELETE for including a tasklist as sync-able.


------
v4.2.9
------

[jan] Fix regression with date picker in tasks form (Bug #14303).
[mjr] Fix handling EAS categories/tags.


------
v4.2.8
------

[mjr] Honor date_format prefs in Task form (Bug #14287).
[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).


------
v4.2.7
------

[mjr] Enforce child tasks must be completed before parent tasks in edit form
      (Bug #12308).
[jan] Use access rules compatible with both Apache 2.2 and 2.4.
[mjr] Fix possible fatal error due to tasks created with an alarm but no due
      date (Bug #14214).
[mjr] Fix storage of parent field when using Kolab driver (Bug #14197,
      mike.gabriel@das-netzwerkteam.de).